syntax = "proto3";

package rivet.backend.pkg.mm.lobby_find_try_complete;

import "proto/common.proto";

message Request {
	repeated rivet.common.Uuid query_ids = 1;
}

message Response {

}
